Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -58,7 +58,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt35684792"
       },
-      "description": "Genres: Drama\nTags:War/Historical/Male Protagonist\nAnime adaptation of Kazuyoshi Takeda's <i>Peleliu: Rakuen no Guernica</i> manga.\n<br><br>\nThe story follows the daily lives of Japanese soldiers taking part in the Battle of Peleliu during World War II: a high-casualty, months-long campaign. The main character, Tamaru, dreams of returning home to become a mangaka, and sees their island outpost as a wild paradise that can one day be used as a setting for one of his stories. Most of his comrades, however, are prepared for the more realistic scenario - that they will not be leaving Peleliu alive."
+      "description": "Genres: Drama\nTags:Historical/War/Male Protagonist\nAnime adaptation of Kazuyoshi Takeda's <i>Peleliu: Rakuen no Guernica</i> manga.\n<br><br>\nThe story follows the daily lives of Japanese soldiers taking part in the Battle of Peleliu during World War II: a high-casualty, months-long campaign. The main character, Tamaru, dreams of returning home to become a mangaka, and sees their island outpost as a wild paradise that can one day be used as a setting for one of his stories. Most of his comrades, however, are prepared for the more realistic scenario - that they will not be leaving Peleliu alive."
     },
     {
       "id": "tt36607192",
