--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -99,11 +99,11 @@
       "description": "Genres: Action, Comedy, Fantasy\nTags:Male Protagonist/Magic\nThe second half of <i>Nageki no Bourei wa Intai shitai</i>.\n<br><br>\nKrai’s adventures as a reluctant leader return, with more chaos ahead.\n<br><br>\n(Source: Crunchyroll News)"
     },
     {
-      "id": "tt34660911",
+      "id": "tt35769369",
       "type": "series",
-      "name": "GINTAMA - Mr. Ginpachi's Zany Class",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162890-IXcik7NFdi3G.jpg",
-      "description": "Genres: Comedy\nTags:School/Surreal Comedy/Parody/Educational/Aliens/Shounen\nAn anime adaptation of the <i>Gintama</i> light novel spin-off.\n<br><br>\n<i>3-nen Z-gumi Ginpachi-sensei</i> reimagines Gintoki Sakata as an eccentric homeroom teacher, guiding his equally unique students through hilarious and often nonsensical lessons.\n<br><br>\n(Source: TV TOKYO presents \"GINTAMA - Mr. Ginpachi's Zany Class\" Anime Expo 2025 Panel, edited) \n<br><br>\n<i>Note: Announced at the the \"Gintama Ato no Matsuri 2023\" event."
+      "name": "Chitose Is in the Ramune Bottle",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180082-IZAlf06G2VVm.png",
+      "description": "Genres: Comedy, Romance\nTags:Female Harem/School/Coming of Age/Male Protagonist/Rural/Baseball/Primarily Teen Cast/Basketball/Primarily Female Cast\nBeing popular isn’t easy. It’s hard to beat Saku Chitose. The most popular kid in his high school? Check. An ironclad reputation that can weather even vicious online attacks? Check. A group of friends as attractive on the outside as they are inside? Check. But when a teacher asks for his help bringing back a student who has been shut away in his room for months, Saku’s perfect world will never be the same. What is this, some kind of normie harem story...?<br>\n<br>\n(Source: Yen Press) "
     },
     {
       "id": "tt34714068",
@@ -113,11 +113,11 @@
       "description": "Genres: Drama, Sports\nTags:Dancing/School Club/School/Seinen/Disability/CGI/Male Protagonist/Female Protagonist\nKaboku Kotani is starting high school, and he plans to do what he’s always done: go along with his friends, keep quiet, and not draw too much attention to himself. After all, it’s hard enough to get by with a stutter like his— why make things worse by standing out from the crowd? But then he sees another first-year, Hikari Wanda, dancing like no one is watching—or like she doesn’t care who sees her. It makes Kaboku wonder: Could he reach that same freedom? To find his way to Wanda, he does something he never thought he could: He joins the dance club. After all, every routine begins with a single step, right? Join Kaboku and Wanda as they freestyle their way to life and love!\n<br><br>\n(Source: Kodansha USA)"
     },
     {
-      "id": "tt35769369",
+      "id": "tt34660911",
       "type": "series",
-      "name": "Chitose Is in the Ramune Bottle",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180082-IZAlf06G2VVm.png",
-      "description": "Genres: Comedy, Romance\nTags:Female Harem/School/Coming of Age/Male Protagonist/Rural/Baseball/Primarily Teen Cast/Basketball/Primarily Female Cast\nBeing popular isn’t easy. It’s hard to beat Saku Chitose. The most popular kid in his high school? Check. An ironclad reputation that can weather even vicious online attacks? Check. A group of friends as attractive on the outside as they are inside? Check. But when a teacher asks for his help bringing back a student who has been shut away in his room for months, Saku’s perfect world will never be the same. What is this, some kind of normie harem story...?<br>\n<br>\n(Source: Yen Press) "
+      "name": "GINTAMA - Mr. Ginpachi's Zany Class",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162890-IXcik7NFdi3G.jpg",
+      "description": "Genres: Comedy\nTags:School/Surreal Comedy/Parody/Educational/Aliens/Shounen\nAn anime adaptation of the <i>Gintama</i> light novel spin-off.\n<br><br>\n<i>3-nen Z-gumi Ginpachi-sensei</i> reimagines Gintoki Sakata as an eccentric homeroom teacher, guiding his equally unique students through hilarious and often nonsensical lessons.\n<br><br>\n(Source: TV TOKYO presents \"GINTAMA - Mr. Ginpachi's Zany Class\" Anime Expo 2025 Panel, edited) \n<br><br>\n<i>Note: Announced at the the \"Gintama Ato no Matsuri 2023\" event."
     },
     {
       "id": "tt30488398",
@@ -176,13 +176,6 @@
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:Shounen/Kuudere/Heterosexual\nMeet Kashiwada-san, a female middle-school student, who remains emotionless regardless of how she is meddled with.\nAnd Oota-kun, unable to control his facial expressions, is the complete opposite of Kashiwada-san--but he keeps messing with her, against his better judgment?!\n<br><br>\nThough both of them are the exact opposite, will a mutual love eventually develop between them...?"
     },
     {
-      "id": "tt32777700",
-      "type": "series",
-      "name": "Dad is a Hero, Mom is a Spirit, I'm a Reincarnator",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173692-shp7PGRQyCQl.jpg",
-      "description": "Genres: Fantasy, Romance\nTags:Magic/Isekai\nEllen, an 8-year-old girl and half-spirit, once lived as a scientist in modern-day Japan. Now she’s been reincarnated into a new family: Rovel, her father and the kingdom’s legendary hero, and Origin, her mother and the queen of spirits. On top of that, Ellen herself has the power to manipulate chemical elements! But are Ellen’s powers enough to protect their family’s happiness?\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt36190100",
       "type": "series",
       "name": "Dusk Beyond the End of the World",
@@ -190,11 +183,11 @@
       "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Dystopian/Heterosexual/Robots/Boys' Love\nWhen growing tensions around AI spark civil unrest, Akira is caught in the crossfire when he protects his girlfriend from an assassin’s bullet. Hundreds of years later, he awakens from cryogenic sleep to an unfamiliar world. As he struggles to come to terms with his new reality, he bonds with an android called Yugure, who bears an uncanny resemblance to his girlfriend. Now, he must ask himself what love means in a world where technology has changed the very fabric of society.<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
     },
     {
-      "id": "tt37430949",
+      "id": "tt32777700",
       "type": "series",
-      "name": "Isekai Quartet 3",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx194447-tf453jwAviDq.png",
-      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Isekai/Parody/Female Protagonist/Male Protagonist/Chibi/Crossover/Ensemble Cast\nThe third season of <i>Isekai Quartet.</i>"
+      "name": "Dad is a Hero, Mom is a Spirit, I'm a Reincarnator",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173692-shp7PGRQyCQl.jpg",
+      "description": "Genres: Fantasy, Romance\nTags:Magic/Isekai\nEllen, an 8-year-old girl and half-spirit, once lived as a scientist in modern-day Japan. Now she’s been reincarnated into a new family: Rovel, her father and the kingdom’s legendary hero, and Origin, her mother and the queen of spirits. On top of that, Ellen herself has the power to manipulate chemical elements! But are Ellen’s powers enough to protect their family’s happiness?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt36631539",
@@ -204,18 +197,18 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon/Male Protagonist\n<i>\"This party does not need a useless magician who can only use support magic. You are fired, Alec Huguette.\"</i>\n<BR><BR>\nOne day, Alec, a court magician who had been chaperoning the Crown Prince's dungeon-crawling party, was suddenly fired and banished from the court by the prince. The only one who reached out to him is Yoruha, his former party member from their Academy of Magic days, that had split up four years ago. \n<BR><BR>\n<i>\"Hey Alec— would you like to come explore dungeons with us again?\"</i>\n<BR><BR>\nThus the legendary \"Lasting Period\" party was revived, and the name will soon became known all over the world once again.\n<BR><BR>\n(Source: Lanove Bunko, translated)"
     },
     {
-      "id": "kitsu:48822",
-      "type": "series",
-      "name": "Kakuriyo -Bed & Breakfast for Spirits- 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177271-Lot4V9iMyPI7.jpg",
-      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Shoujo/Youkai/Food\nThe second season of <i>Kakuriyo no Yadomeshi</i>.<br><br>\n\nAoi—a girl who can see spirits known as ayakashi—was suddenly approached by an ogre. Demanding she pay her grandfather’s debt, Odanna made a huge request: her hand in marriage! Refusing this absurd offer, Aoi decided to work at the Tenjin-ya bed and breakfast to pay back what her family owes. Where we left off, Aoi continues her employment at the Tenjin-ya where even more ayakashi drama ensues and challenges await her.<br><br>\n\n(Source: Crunchyroll, edited)"
-    },
-    {
       "id": "tt36132068",
       "type": "series",
       "name": "Yano-kun's Ordinary Days",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/School/Primarily Teen Cast/Heterosexual\nKiyoko Yoshida is an overanxious class representative who can’t help but worry about Tsuyoshi Yano, who sits beside her. Tsuyoshi comes to school covered in bruises, and as Kiyoko tends to him day after day, the two draw closer. Where will Kiyoko’s feelings take her? Will Tsuyoshi’s life ever be normal? A romantic comedy between an anxious girl and a boy who’s always injured is about to begin!\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt37430949",
+      "type": "series",
+      "name": "Isekai Quartet 3",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx194447-tf453jwAviDq.png",
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Isekai/Parody/Female Protagonist/Male Protagonist/Chibi/Crossover/Ensemble Cast\nThe third season of <i>Isekai Quartet.</i>"
     },
     {
       "id": "tt38037460",
@@ -225,18 +218,25 @@
       "description": "Genres: Fantasy, Romance\nTags:Female Protagonist/Shoujo/Royal Affairs/Food\nAny proper noble lady must cultivate refined tastes, and Lady Melphiera’s delicacy of choice is…monsters! Unfortunately, society frowns upon such unladylike cravings and brands her the “Voracious Villainess.” At a banquet, she’s attacked by a monster, only to be saved by the feared “Blood-Mad Duke.” He’s brutal, mysterious, and charming. Could he be the one to appreciate her monstrous appetite?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
+      "id": "kitsu:48822",
+      "type": "series",
+      "name": "Kakuriyo -Bed & Breakfast for Spirits- 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177271-Lot4V9iMyPI7.jpg",
+      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Shoujo/Youkai/Food\nThe second season of <i>Kakuriyo no Yadomeshi</i>.<br><br>\n\nAoi—a girl who can see spirits known as ayakashi—was suddenly approached by an ogre. Demanding she pay her grandfather’s debt, Odanna made a huge request: her hand in marriage! Refusing this absurd offer, Aoi decided to work at the Tenjin-ya bed and breakfast to pay back what her family owes. Where we left off, Aoi continues her employment at the Tenjin-ya where even more ayakashi drama ensues and challenges await her.<br><br>\n\n(Source: Crunchyroll, edited)"
+    },
+    {
+      "id": "tt38412257",
+      "type": "series",
+      "name": "Li'l Miss Vampire Can't Suck Right",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186524-JSsyFR3FqTO8.jpg",
+      "description": "Genres: Comedy, Slice of Life, Supernatural\nTags:Vampire/School/Male Protagonist/Female Protagonist/Kuudere/Heterosexual/Primarily Teen Cast\nLuna Ishikawa is a dark and mysterious vampire—or so she'd like her new classmates to believe. The truth is, while she may be one of the not-so-mythical bloodsuckers, she doesn't really live up to the hype. She's short and clumsy, and she can't even suck blood properly! So when her classmate Tatsuta Ootori discovers her little “drinking problem,” he can't help but lend a hand. Can he nurse Luna from the small, timid animal she is into a fearsome creature of the night?!\n<br><br>\n(Source: Yen Press)"
+    },
+    {
       "id": "tt36912922",
       "type": "series",
       "name": "Mechanical Marie",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179992-tu21efjGADCO.png",
       "description": "Genres: Action, Comedy, Romance, Sci-Fi\nTags:Female Protagonist/Shoujo/Maids/Slapstick/Robots\n<i> “At last, she’s complete. This is Marie, a robot maid.”</i>\n<br><br>\nMarie, a former legendary martial artist, now conceals her identity as a human and starts working as a “robot” in the mansion of Arthur, heir to a conglomerate that despises humans. Her human identity must remain hidden—because one slip-up and she’s dead! Her naturally emotionless demeanor helps her maintain her “robot” disguise and flawlessly perform her duties, all while struggling to protect Arthur from assassins sent to take his life. She lives each day on the edge with her heart racing, because Arthur is head over heels for Marie, and her human identity is nearly exposed!<br><br>\n\nA maid pretending to be a robot x A young heir who hates humans. Get ready for a heartwarming comedy that’ll make you laugh and cry! What began as a lie between master and maid blossoms into a love neither of them saw coming.<br><br>\n\n(Source: Crunchyroll) "
-    },
-    {
-      "id": "tt32896333",
-      "type": "series",
-      "name": "Li'l Miss Vampire Can't Suck Right",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186524-JSsyFR3FqTO8.jpg",
-      "description": "Genres: Comedy, Slice of Life, Supernatural\nTags:Vampire/School/Male Protagonist/Female Protagonist/Kuudere/Heterosexual/Primarily Teen Cast\nLuna Ishikawa is a dark and mysterious vampire—or so she'd like her new classmates to believe. The truth is, while she may be one of the not-so-mythical bloodsuckers, she doesn't really live up to the hype. She's short and clumsy, and she can't even suck blood properly! So when her classmate Tatsuta Ootori discovers her little “drinking problem,” he can't help but lend a hand. Can he nurse Luna from the small, timid animal she is into a fearsome creature of the night?!\n<br><br>\n(Source: Yen Press)"
     },
     {
       "id": "tt37430949",
@@ -283,7 +283,7 @@
     {
       "id": "tt37431541",
       "type": "series",
-      "name": "Sawaranaide Kotesashi-kun",
+      "name": "Hands off: Sawaranaide Kotesashi-kun!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx187331-ylRHyvJIVPeO.jpg",
       "description": "Genres: Comedy, Ecchi, Romance, Sports\nTags:Female Harem/Male Protagonist/Medicine/Shounen/School/Primarily Female Cast/Nudity\nKotesashi Kouyou possesses outstanding skill as a masseur. He aspires to become a sports doctor and wants to get a scholarship in medical school. Starting spring, he attends the high school attached to Seiwa University, a sports powerhouse. Since his family is not wealthy, he has to work as a hostel manager, where he is also allowed to stay, to pay for his school expenses. There he encounters high school girl athletes with various problems. Kotesashi's job is to take care of them physically and mentally and be the hostel manager.<br><br>\n\n(Source: Kodansha, translated)"
     },
