--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -134,18 +134,18 @@
       "description": "Genres: Comedy, Romance\nTags:Seinen/Office Lady/Tsundere/Urban/Primarily Adult Cast\nKannawa-senpai is considered many things, but smooth is definitely not one of them. Then she meets Kamegawa, her new Kouhai. He's cute, a little nerdy, and easy to talk to. How will this awkward Senpai be able to handle these new feelings?! \n<br><br>\n(Source: Comikey) "
     },
     {
-      "id": "tt35437675",
-      "type": "series",
-      "name": "Uma Musume: Cinderella Gray Part 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195240-RopaGsHkYSYi.jpg",
-      "description": "Genres: Drama, Sports\nTags:Athletics/Female Protagonist/Historical/Kemonomimi/Primarily Female Cast\nThe second half of <i>Umamusume: Cinderella Gray</i>."
-    },
-    {
       "id": "tt36593026",
       "type": "series",
       "name": "My Gift Lvl 9999 Unlimited Gacha: Backstabbed in a Backwater Dungeon, I'm Out for Revenge!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184322-rRkaMQ7J1zOI.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Anti-Hero/Dungeon/Magic/Maids/Gore/Survival\nWhen Light is kicked out of the Concord of the Tribes, his former comrades instantly turn on him. Light escapes this diabolical act of betrayal by the skin of his teeth...only to find himself in the deepest part of the Abyss, the most dangerous dungeon in the realm! To avoid being eaten by carnivorous monsters, he uses the Unlimited Gacha, his sole magical skill. But where it previously only produced junk items, this time Mei—a gorgeous Level 9999 fighter in a maid outfit—springs forth! Fast forward three years and Light has carved out his own kingdom in this backwater dungeon, summoning more beautiful Level 9999 warriors who swear absolute fealty to him. Now a powerful Level 9999 Overlord himself, Light plans to ascend to the surface and take revenge on his betrayers one by one!\n<br><br>\n(Source: J-Novel Club)"
+    },
+    {
+      "id": "tt35437675",
+      "type": "series",
+      "name": "Uma Musume: Cinderella Gray Part 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195240-RopaGsHkYSYi.jpg",
+      "description": "Genres: Drama, Sports\nTags:Athletics/Female Protagonist/Historical/Kemonomimi/Primarily Female Cast\nThe second half of <i>Umamusume: Cinderella Gray</i>."
     },
     {
       "id": "tt33258199",
@@ -190,18 +190,18 @@
       "description": "Genres: Fantasy, Romance\nTags:Magic/Isekai\nEllen, an 8-year-old girl and half-spirit, once lived as a scientist in modern-day Japan. Now she’s been reincarnated into a new family: Rovel, her father and the kingdom’s legendary hero, and Origin, her mother and the queen of spirits. On top of that, Ellen herself has the power to manipulate chemical elements! But are Ellen’s powers enough to protect their family’s happiness?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt36132068",
-      "type": "series",
-      "name": "Yano-kun's Ordinary Days",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/School/Primarily Teen Cast/Heterosexual\nKiyoko Yoshida is an overanxious class representative who can’t help but worry about Tsuyoshi Yano, who sits beside her. Tsuyoshi comes to school covered in bruises, and as Kiyoko tends to him day after day, the two draw closer. Where will Kiyoko’s feelings take her? Will Tsuyoshi’s life ever be normal? A romantic comedy between an anxious girl and a boy who’s always injured is about to begin!\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt36631539",
       "type": "series",
       "name": "The Banished Court Magician Aims to Become the Strongest",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188487-gewgvReLVli9.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon/Male Protagonist\n<i>\"This party does not need a useless magician who can only use support magic. You are fired, Alec Huguette.\"</i>\n<BR><BR>\nOne day, Alec, a court magician who had been chaperoning the Crown Prince's dungeon-crawling party, was suddenly fired and banished from the court by the prince. The only one who reached out to him is Yoruha, his former party member from their Academy of Magic days, that had split up four years ago. \n<BR><BR>\n<i>\"Hey Alec— would you like to come explore dungeons with us again?\"</i>\n<BR><BR>\nThus the legendary \"Lasting Period\" party was revived, and the name will soon became known all over the world once again.\n<BR><BR>\n(Source: Lanove Bunko, translated)"
+    },
+    {
+      "id": "tt36132068",
+      "type": "series",
+      "name": "Yano-kun's Ordinary Days",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/School/Primarily Teen Cast/Heterosexual\nKiyoko Yoshida is an overanxious class representative who can’t help but worry about Tsuyoshi Yano, who sits beside her. Tsuyoshi comes to school covered in bruises, and as Kiyoko tends to him day after day, the two draw closer. Where will Kiyoko’s feelings take her? Will Tsuyoshi’s life ever be normal? A romantic comedy between an anxious girl and a boy who’s always injured is about to begin!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt38037460",
@@ -260,18 +260,18 @@
       "description": "Genres: Adventure, Fantasy, Sci-Fi\nTags:Urban\n<i>GLITCH THE FUTURE.</i><br><br>\n\n\"e-Pulse,\" which is generated by human thoughts and emotions, was used as the energy source for the AI support device \"Sapotama.\" From the shadows of this remarkable development, terrifying monsters appear. Digimon are living beings that evolve by consuming e-Pulse. Tomorou Tenma is drawn into an extraordinary experience after meeting Gekkomon, who suddenly appears from his Sapotama. While living together with Kyou Sawashiro and other members of the bounty hunting team \"Golden Dawn,\" Tomorou renews his resolve. What new future will be forged by humans and Digimon? <br><br>\n\n(Source: DIGIMON BEATBREAK Official Site, edited)"
     },
     {
-      "id": "tt32832412",
-      "type": "series",
-      "name": "With You, Our Love Will Make It Through",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-rgdRQgwOJUpb.png",
-      "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi/CGI\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
-    },
-    {
       "id": "tt37546327",
       "type": "series",
       "name": "Touring After the Apocalypse",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186920-nrYITcE4TEuk.jpg",
       "description": "Genres: Adventure, Sci-Fi, Slice of Life\nTags:Post-Apocalyptic/Iyashikei/Female Protagonist/Travel/Motorcycles\nTwo young girls, Yoko and Airi, travel through an empty post-apocalyptic world.\n<br><br>\nThey photograph the scenery of famous places all to themselves and camp out in towns full of nature.\n<br><br>\nThe two of them ride and travel on a Serow off-road motorbike together, experiencing a never-before-felt freedom in travel with no traffic and no traffic lights.\n<br><br>\nWith the Serow bike, they embark on a journey around a now-destroyed Japan; a unique story about touring on a bike comes to life as an anime series!\n<br><br>\nThe world's over now, so let’s hop on a bike and go on a journey!\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt32832412",
+      "type": "series",
+      "name": "With You, Our Love Will Make It Through",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-rgdRQgwOJUpb.png",
+      "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi/CGI\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
     },
     {
       "id": "tt37431541",
@@ -281,18 +281,18 @@
       "description": "Genres: Comedy, Ecchi, Romance, Sports\nTags:Female Harem/Male Protagonist/Medicine/Shounen/School/Primarily Female Cast/Nudity\nKotesashi Kouyou possesses outstanding skill as a masseur. He aspires to become a sports doctor and wants to get a scholarship in medical school. Starting spring, he attends the high school attached to Seiwa University, a sports powerhouse. Since his family is not wealthy, he has to work as a hostel manager, where he is also allowed to stay, to pay for his school expenses. There he encounters high school girl athletes with various problems. Kotesashi's job is to take care of them physically and mentally and be the hostel manager.<br><br>\n\n(Source: Kodansha, translated)"
     },
     {
-      "id": "tt32779175",
-      "type": "series",
-      "name": "The Dark History of the Reincarnated Villainess",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174914-RfPIqbrapByY.jpg",
-      "description": "Genres: Comedy, Fantasy, Romance\nTags:Shoujo/Isekai/Female Protagonist\nKonoha Satou’s dark fictional past becomes her reality when she’s reincarnated as Iana Magnolia, the villainess of her own adolescent fantasy. Now as a role she meticulously designed to be despicable, remembering every last detail is a matter of life and death. Will she be able to rewrite her character’s fate into something peaceful?\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt34852231",
       "type": "series",
       "name": "GNOSIA",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185116-DIFRjiMgz1IS.jpg",
       "description": "Genres: Drama, Mystery, Sci-Fi\nTags:Aliens/Survival/Space/LGBTQ+ Themes/Transgender/Amnesia/Primarily Adult Cast/Agender\nThe story of <i>GNOSIA</i> takes place on a ship drifting through space. Gnosia is an enemy that disguises itself as a human and attacks them. It is now on the spaceship, causing everyone onboard to be suspicious of each other. The crew decides to vote on the most suspicious-looking person every day and put them into a cold sleep.<br><br>\n\nIf the humans succeed in putting Gnosia to sleep, they'll win. On the other hand, if they don't, everyone on board is in danger. The right decision must be made. No matter what decision is made by the main character, Yuri, she finds herself in a time loop that returns her to the first day of the crisis. <br><br>\n\nWill the crew on board make the right decision? What is the secret behind the time loop? What secrets hide behind the faces of everyone on board?<br><br>\n\n<i>GNOSIA</i> begins now – a story of looping, fleeting moments that feels like an eternity but passes by in an instant.<br><br>\n\nHave a pleasant journey.<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt32779175",
+      "type": "series",
+      "name": "The Dark History of the Reincarnated Villainess",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174914-RfPIqbrapByY.jpg",
+      "description": "Genres: Comedy, Fantasy, Romance\nTags:Shoujo/Isekai/Female Protagonist/Villainess\nKonoha Satou’s dark fictional past becomes her reality when she’s reincarnated as Iana Magnolia, the villainess of her own adolescent fantasy. Now as a role she meticulously designed to be despicable, remembering every last detail is a matter of life and death. Will she be able to rewrite her character’s fate into something peaceful?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt36593047",
@@ -337,18 +337,18 @@
       "description": "Genres: Action, Adventure, Comedy, Mystery, Romance\nTags:Crime/Female Protagonist/Shounen\nA new adaption of the manga of the same name by Tsukasa Houjou. <br><br>\n<i>Cat’s Eye</i> is a secretive trio of art thieves relentlessly pursued by Detective Toshio. Unbeknownst to him, the middle sister of the elusive thieves is none other than his girlfriend, Hitomi.<br><br>\n(Source: Disney+)"
     },
     {
-      "id": "tt8225204",
-      "type": "series",
-      "name": "Golden Kamuy: Inazuma Goutou to Mamushi no Ogin/Shimaenaga",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx194872-J11fIWuuU6T4.jpg",
-      "description": "Genres: Action, Adventure, Comedy\nTags:\nA OVA that will adapt the Inazuma Goutou to Mamushi no Ogin and Shimaenaga chapter."
-    },
-    {
       "id": "tt37532849",
       "type": "series",
       "name": "Alma-chan Wants to Be a Family!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186190-Ru77wfF8I61X.jpg",
       "description": "Genres: Comedy, Romance, Sci-Fi, Slice of Life\nTags:Family Life/Artificial Intelligence/Robots/Iyashikei/Found Family\nA body that combines the appearance of an adorable young girl with overwhelming combat efficiency. An AI with intelligence and decision-making skills that surpass human capabilities—the perfect autonomous robot, \"Alma\" was created by the overlooked young genius scientists Enji and Suzume whose brilliance should've been recognized by the world! Alma calls Enji and Suzume \"Father\" and \"Mother\" which leaves them completely flustered. Regardless, the three begin a life together as a family in order to nurture Alma's powerful AI and help her evolve into the ultimate robot. Alma's curiosity has no limits as everything she sees and touches is new to her. Alma keeps Enji and Suzume on their toes with her unmatched learning capabilities and unstoppable energy as she explores the bigger world. A brand-new kind of family comedy (?!) begins!!<br><br>\n\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt8225204",
+      "type": "series",
+      "name": "Golden Kamuy: Inazuma Goutou to Mamushi no Ogin/Shimaenaga",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx194872-J11fIWuuU6T4.jpg",
+      "description": "Genres: Action, Adventure, Comedy\nTags:\nA OVA that will adapt the Inazuma Goutou to Mamushi no Ogin and Shimaenaga chapter."
     }
   ]
 }
