--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -159,7 +159,7 @@
       "type": "series",
       "name": "Hero Without a Class: Who Even Needs Skills?!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169969-SqCjoqYT4A6Z.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Shounen/Male Protagonist/Dungeon/Swordplay/Magic\nIn a world where one’s class determines everything, Arel, the son of a Sword Princess and an Archmage, was expected to inherit greatness. But when he discovers he’s classless, everything changes. Now he’s determined to prove that hard work and dedication are enough to not just succeed, but to excel as an adventurer!\n<br><br>\n(Source: HIDIVE)"
+      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Shounen/Male Protagonist/Swordplay/Dungeon/Magic/Rural\nIn a world where one’s class determines everything, Arel, the son of a Sword Princess and an Archmage, was expected to inherit greatness. But when he discovers he’s classless, everything changes. Now he’s determined to prove that hard work and dedication are enough to not just succeed, but to excel as an adventurer!\n<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Mushoku no Eiyuu: Betsu ni Skill nanka Ira Nakattan Daga was streamed a week in advance of the TV broadcast on dAnimestore, ABEMA and HIDIVE beginning September 24, 2025. Regular broadcasting began on October 1, 2025.</i>"
     },
     {
       "id": "tt36833523",
@@ -190,18 +190,18 @@
       "description": "Genres: Fantasy, Romance\nTags:Magic/Isekai\nEllen, an 8-year-old girl and half-spirit, once lived as a scientist in modern-day Japan. Now she’s been reincarnated into a new family: Rovel, her father and the kingdom’s legendary hero, and Origin, her mother and the queen of spirits. On top of that, Ellen herself has the power to manipulate chemical elements! But are Ellen’s powers enough to protect their family’s happiness?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt36631539",
-      "type": "series",
-      "name": "The Banished Court Magician Aims to Become the Strongest",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188487-gewgvReLVli9.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon/Male Protagonist\n<i>\"This party does not need a useless magician who can only use support magic. You are fired, Alec Huguette.\"</i>\n<BR><BR>\nOne day, Alec, a court magician who had been chaperoning the Crown Prince's dungeon-crawling party, was suddenly fired and banished from the court by the prince. The only one who reached out to him is Yoruha, his former party member from their Academy of Magic days, that had split up four years ago. \n<BR><BR>\n<i>\"Hey Alec— would you like to come explore dungeons with us again?\"</i>\n<BR><BR>\nThus the legendary \"Lasting Period\" party was revived, and the name will soon became known all over the world once again.\n<BR><BR>\n(Source: Lanove Bunko, translated)"
-    },
-    {
       "id": "tt36132068",
       "type": "series",
       "name": "Yano-kun's Ordinary Days",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/School/Primarily Teen Cast/Heterosexual\nKiyoko Yoshida is an overanxious class representative who can’t help but worry about Tsuyoshi Yano, who sits beside her. Tsuyoshi comes to school covered in bruises, and as Kiyoko tends to him day after day, the two draw closer. Where will Kiyoko’s feelings take her? Will Tsuyoshi’s life ever be normal? A romantic comedy between an anxious girl and a boy who’s always injured is about to begin!\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt36631539",
+      "type": "series",
+      "name": "The Banished Court Magician Aims to Become the Strongest",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188487-gewgvReLVli9.jpg",
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon/Male Protagonist\n<i>\"This party does not need a useless magician who can only use support magic. You are fired, Alec Huguette.\"</i>\n<BR><BR>\nOne day, Alec, a court magician who had been chaperoning the Crown Prince's dungeon-crawling party, was suddenly fired and banished from the court by the prince. The only one who reached out to him is Yoruha, his former party member from their Academy of Magic days, that had split up four years ago. \n<BR><BR>\n<i>\"Hey Alec— would you like to come explore dungeons with us again?\"</i>\n<BR><BR>\nThus the legendary \"Lasting Period\" party was revived, and the name will soon became known all over the world once again.\n<BR><BR>\n(Source: Lanove Bunko, translated)"
     },
     {
       "id": "tt38037460",
@@ -267,11 +267,11 @@
       "description": "Genres: Adventure, Sci-Fi, Slice of Life\nTags:Post-Apocalyptic/Iyashikei/Female Protagonist/Travel/Motorcycles\nTwo young girls, Yoko and Airi, travel through an empty post-apocalyptic world.\n<br><br>\nThey photograph the scenery of famous places all to themselves and camp out in towns full of nature.\n<br><br>\nThe two of them ride and travel on a Serow off-road motorbike together, experiencing a never-before-felt freedom in travel with no traffic and no traffic lights.\n<br><br>\nWith the Serow bike, they embark on a journey around a now-destroyed Japan; a unique story about touring on a bike comes to life as an anime series!\n<br><br>\nThe world's over now, so let’s hop on a bike and go on a journey!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32832412",
+      "id": "tt34852231",
       "type": "series",
-      "name": "With You, Our Love Will Make It Through",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-rgdRQgwOJUpb.png",
-      "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi/CGI\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
+      "name": "GNOSIA",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185116-DIFRjiMgz1IS.jpg",
+      "description": "Genres: Drama, Mystery, Sci-Fi\nTags:Aliens/Survival/Space/LGBTQ+ Themes/Transgender/Amnesia/Primarily Adult Cast/Agender\nThe story of <i>GNOSIA</i> takes place on a ship drifting through space. Gnosia is an enemy that disguises itself as a human and attacks them. It is now on the spaceship, causing everyone onboard to be suspicious of each other. The crew decides to vote on the most suspicious-looking person every day and put them into a cold sleep.<br><br>\n\nIf the humans succeed in putting Gnosia to sleep, they'll win. On the other hand, if they don't, everyone on board is in danger. The right decision must be made. No matter what decision is made by the main character, Yuri, she finds herself in a time loop that returns her to the first day of the crisis. <br><br>\n\nWill the crew on board make the right decision? What is the secret behind the time loop? What secrets hide behind the faces of everyone on board?<br><br>\n\n<i>GNOSIA</i> begins now – a story of looping, fleeting moments that feels like an eternity but passes by in an instant.<br><br>\n\nHave a pleasant journey.<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt37431541",
@@ -281,11 +281,11 @@
       "description": "Genres: Comedy, Ecchi, Romance, Sports\nTags:Female Harem/Male Protagonist/Medicine/Shounen/School/Primarily Female Cast/Nudity\nKotesashi Kouyou possesses outstanding skill as a masseur. He aspires to become a sports doctor and wants to get a scholarship in medical school. Starting spring, he attends the high school attached to Seiwa University, a sports powerhouse. Since his family is not wealthy, he has to work as a hostel manager, where he is also allowed to stay, to pay for his school expenses. There he encounters high school girl athletes with various problems. Kotesashi's job is to take care of them physically and mentally and be the hostel manager.<br><br>\n\n(Source: Kodansha, translated)"
     },
     {
-      "id": "tt34852231",
+      "id": "tt32832412",
       "type": "series",
-      "name": "GNOSIA",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185116-DIFRjiMgz1IS.jpg",
-      "description": "Genres: Drama, Mystery, Sci-Fi\nTags:Aliens/Survival/Space/LGBTQ+ Themes/Transgender/Amnesia/Primarily Adult Cast/Agender\nThe story of <i>GNOSIA</i> takes place on a ship drifting through space. Gnosia is an enemy that disguises itself as a human and attacks them. It is now on the spaceship, causing everyone onboard to be suspicious of each other. The crew decides to vote on the most suspicious-looking person every day and put them into a cold sleep.<br><br>\n\nIf the humans succeed in putting Gnosia to sleep, they'll win. On the other hand, if they don't, everyone on board is in danger. The right decision must be made. No matter what decision is made by the main character, Yuri, she finds herself in a time loop that returns her to the first day of the crisis. <br><br>\n\nWill the crew on board make the right decision? What is the secret behind the time loop? What secrets hide behind the faces of everyone on board?<br><br>\n\n<i>GNOSIA</i> begins now – a story of looping, fleeting moments that feels like an eternity but passes by in an instant.<br><br>\n\nHave a pleasant journey.<br><br>\n(Source: Crunchyroll)"
+      "name": "With You, Our Love Will Make It Through",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-rgdRQgwOJUpb.png",
+      "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi/CGI\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
     },
     {
       "id": "tt32779175",
