Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -15,7 +15,7 @@
       "description": "Genres: Action, Comedy, Slice of Life, Supernatural\nTags:Espionage/Female Protagonist/Male Protagonist/Assassins/Urban/Martial Arts/Urban Fantasy/Found Family/Super Power/Parenthood/School/Shounen/Ensemble Cast/Guns/Cohabitation/Politics/Family Life\nThe third season of <i>SPY×FAMILY</i>. <br><br>\nWorld peace is at stake and secret agent Twilight must undergo his most difficult mission yet—pretend to be a family man. Posing as a loving husband and father, he’ll infiltrate an elite school to get close to a high-profile politician. He has the perfect cover, except his wife’s a deadly assassin and neither knows each other’s identity. But someone does, his adopted daughter who’s a telepath!<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt35636246",
+      "id": "tt5626028",
       "type": "series",
       "name": "My Hero Academia FINAL SEASON",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182896-mvxTVHGdDB4q.jpg",
@@ -64,7 +64,7 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Medieval/Magic/Isekai/Assassins/Conspiracy/Elf/Male Protagonist\nAkira Oda and his high school classmates are summoned to another world! While the other students are granted cheat abilities through the summoning, Akira merely gains the abilities of a mediocre “assassin.” However, his status soon surpasses “hero,” the strongest profession. After Akira becomes suspicious of the King behind the summoning, he is falsely framed for a crime and forced to flee.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt31844203",
+      "id": "tt32766897",
       "type": "series",
       "name": "Ranma1/2 (2024) Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185731-PJ6WKcFDUI4B.jpg",
@@ -89,14 +89,7 @@
       "type": "series",
       "name": "A Wild Last Boss Appeared!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180523-FjvW1XByUNMK.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Gender Bending/Magic/Virtual World/Video Games/Primarily Female Cast/Female Protagonist/Super Power\nAn MMO gamer awakens as the Black-Winged Tyrant, Lufas Maphaahl, rising from her sealed fate—only to find this is very real. Her defeat 200 years ago unleashed monsters of death, and the legend is one of terror. Now, trapped in the body of history’s most feared conqueror, he must survive a world that wants her dead…and uncover why he’s here.\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
-      "id": "tt32508529",
-      "type": "series",
-      "name": "Let This Grieving Soul Retire Cour 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185801-HaxWxYlkFnRg.png",
-      "description": "Genres: Action, Comedy, Fantasy\nTags:Male Protagonist/Magic\nThe second half of <i>Nageki no Bourei wa Intai shitai</i>.\n<br><br>\nKrai’s adventures as a reluctant leader return, with more chaos ahead.\n<br><br>\n(Source: Crunchyroll News)"
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Gender Bending/Magic/Virtual World/Video Games/Female Protagonist/Primarily Female Cast/Super Power\nAn MMO gamer awakens as the Black-Winged Tyrant, Lufas Maphaahl, rising from her sealed fate—only to find this is very real. Her defeat 200 years ago unleashed monsters of death, and the legend is one of terror. Now, trapped in the body of history’s most feared conqueror, he must survive a world that wants her dead…and uncover why he’s here.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32582999",
@@ -104,6 +97,13 @@
       "name": "Hero Without a Class: Who Even Needs Skills?!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169969-SqCjoqYT4A6Z.jpg",
       "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Shounen/Swordplay/Magic/Male Protagonist/Rural/Dungeon\nIn a world where one’s class determines everything, Arel, the son of a Sword Princess and an Archmage, was expected to inherit greatness. But when he discovers he’s classless, everything changes. Now he’s determined to prove that hard work and dedication are enough to not just succeed, but to excel as an adventurer!\n<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Mushoku no Eiyuu: Betsu ni Skill nanka Ira Nakattan Daga was streamed a week in advance of the TV broadcast on dAnimestore, ABEMA and HIDIVE beginning September 24, 2025. Regular broadcasting began on October 1, 2025.</i>"
+    },
+    {
+      "id": "tt32508529",
+      "type": "series",
+      "name": "Let This Grieving Soul Retire Cour 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185801-HaxWxYlkFnRg.png",
+      "description": "Genres: Action, Comedy, Fantasy\nTags:Male Protagonist/Magic\nThe second half of <i>Nageki no Bourei wa Intai shitai</i>.\n<br><br>\nKrai’s adventures as a reluctant leader return, with more chaos ahead.\n<br><br>\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt21927720",
@@ -120,7 +120,7 @@
       "description": "Genres: Comedy, Romance\nTags:Female Harem/School/Coming of Age/Male Protagonist/Rural/Baseball/Primarily Teen Cast/Basketball/Primarily Female Cast\nBeing popular isn’t easy. It’s hard to beat Saku Chitose. The most popular kid in his high school? Check. An ironclad reputation that can weather even vicious online attacks? Check. A group of friends as attractive on the outside as they are inside? Check. But when a teacher asks for his help bringing back a student who has been shut away in his room for months, Saku’s perfect world will never be the same. What is this, some kind of normie harem story...?<br>\n<br>\n(Source: Yen Press) "
     },
     {
-      "id": "tt31975747",
+      "id": "tt37532634",
       "type": "series",
       "name": "Dusk Beyond the End of the World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195153-yiRxZP5pPJLi.png",
@@ -136,7 +136,7 @@
     {
       "id": "tt37679127",
       "type": "series",
-      "name": "Bukiyou na Senpai.",
+      "name": "My Awkward Senpai",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185575-moQeN8f5xRBv.jpg",
       "description": "Genres: Comedy, Romance\nTags:Seinen/Office Lady/Tsundere/Urban/Primarily Adult Cast\nKannawa-senpai is considered many things, but smooth is definitely not one of them. Then she meets Kamegawa, her new Kouhai. He's cute, a little nerdy, and easy to talk to. How will this awkward Senpai be able to handle these new feelings?! \n<br><br>\n(Source: Comikey) "
     },
@@ -155,6 +155,13 @@
       "description": "Genres: Adventure, Comedy, Ecchi, Fantasy, Romance\nTags:Seinen\nThe second season of <i>Kekkon Yubiwa Monogatari.</i> <br><br>\n\nSato and his party are back, but will they finally manage to defeat the Abyss King and gain peace?\n\n<br><br>(Source: Crunchyroll News)"
     },
     {
+      "id": "tt37430949",
+      "type": "series",
+      "name": "A Gatherer's Adventure in Isekai",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx187663-VVdpMlkhwMSh.jpg",
+      "description": "Genres: Adventure, Comedy, Fantasy, Slice of Life\nTags:Male Protagonist/Isekai/Magic/Food/Elf/Dragons\nKamishiro Takeru was just an ordinary guy with an ordinary office job, until he’s suddenly summoned to Madeus, a world with swords and magic. Life as he knew it is over, but he’s starting his new one with powerful abilities: enhanced strength, overwhelming magic, and a “search” skill that allows him to find valuable items! Armed with his new cheat skills, Takeru begins his isekai journey!\n<br><br>\n\n(Source: Crunchyroll) <br><br>\n<i>Note: Each episode streams 1 week early on some streaming services. The original TV broadcast starts on October 7th, 2025.</i>"
+    },
+    {
       "id": "tt27182605",
       "type": "series",
       "name": "GINTAMA - Mr. Ginpachi's Zany Class",
@@ -162,18 +169,18 @@
       "description": "Genres: Comedy\nTags:School/Surreal Comedy/Parody/Educational/Aliens/Shounen\nAn anime adaptation of the <i>Gintama</i> light novel spin-off.\n<br><br>\n<i>3-nen Z-gumi Ginpachi-sensei</i> reimagines Gintoki Sakata as an eccentric homeroom teacher, guiding his equally unique students through hilarious and often nonsensical lessons.\n<br><br>\n(Source: TV TOKYO presents \"GINTAMA - Mr. Ginpachi's Zany Class\" Anime Expo 2025 Panel, edited) \n<br><br>\n<i>Note: Announced at the the \"Gintama Ato no Matsuri 2023\" event."
     },
     {
+      "id": "tt36132068",
+      "type": "series",
+      "name": "Yano-kun's Ordinary Days",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/Female Protagonist/Heterosexual/School/Primarily Teen Cast/Urban/Slapstick\nKiyoko Yoshida is an overanxious class representative who can’t help but worry about Tsuyoshi Yano, who sits beside her. Tsuyoshi comes to school covered in bruises, and as Kiyoko tends to him day after day, the two draw closer. Where will Kiyoko’s feelings take her? Will Tsuyoshi’s life ever be normal? A romantic comedy between an anxious girl and a boy who’s always injured is about to begin!\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
       "id": "tt35437675",
       "type": "series",
       "name": "Uma Musume: Cinderella Gray Part 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195240-hKcmllV6YHQT.jpg",
       "description": "Genres: Drama, Sports\nTags:Athletics/Female Protagonist/Historical/Kemonomimi/Primarily Female Cast/Seinen\nThe second half of <i>Umamusume: Cinderella Gray</i>."
-    },
-    {
-      "id": "tt37430949",
-      "type": "series",
-      "name": "A Gatherer's Adventure in Isekai",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx187663-VVdpMlkhwMSh.jpg",
-      "description": "Genres: Adventure, Comedy, Fantasy, Slice of Life\nTags:Male Protagonist/Isekai/Magic/Food/Elf/Dragons\nKamishiro Takeru was just an ordinary guy with an ordinary office job, until he’s suddenly summoned to Madeus, a world with swords and magic. Life as he knew it is over, but he’s starting his new one with powerful abilities: enhanced strength, overwhelming magic, and a “search” skill that allows him to find valuable items! Armed with his new cheat skills, Takeru begins his isekai journey!\n<br><br>\n\n(Source: Crunchyroll) <br><br>\n<i>Note: Each episode streams 1 week early on some streaming services. The original TV broadcast starts on October 7th, 2025.</i>"
     },
     {
       "id": "tt37532031",
@@ -197,13 +204,6 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon/Male Protagonist\n<i>\"This party does not need a useless magician who can only use support magic. You are fired, Alec Huguette.\"</i>\n<BR><BR>\nOne day, Alec, a court magician who had been chaperoning the Crown Prince's dungeon-crawling party, was suddenly fired and banished from the court by the prince. The only one who reached out to him is Yoruha, his former party member from their Academy of Magic days, that had split up four years ago. \n<BR><BR>\n<i>\"Hey Alec— would you like to come explore dungeons with us again?\"</i>\n<BR><BR>\nThus the legendary \"Lasting Period\" party was revived, and the name will soon became known all over the world once again.\n<BR><BR>\n(Source: Lanove Bunko, translated)"
     },
     {
-      "id": "tt36132068",
-      "type": "series",
-      "name": "Yano-kun's Ordinary Days",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/School/Primarily Teen Cast/Heterosexual/Female Protagonist/Urban\nKiyoko Yoshida is an overanxious class representative who can’t help but worry about Tsuyoshi Yano, who sits beside her. Tsuyoshi comes to school covered in bruises, and as Kiyoko tends to him day after day, the two draw closer. Where will Kiyoko’s feelings take her? Will Tsuyoshi’s life ever be normal? A romantic comedy between an anxious girl and a boy who’s always injured is about to begin!\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt32777700",
       "type": "series",
       "name": "Dad is a Hero, Mom is a Spirit, I'm a Reincarnator",
@@ -218,7 +218,7 @@
       "description": "Genres: Fantasy, Romance\nTags:Female Protagonist/Shoujo/Royal Affairs/Food\nAny proper noble lady must cultivate refined tastes, and Lady Melphiera’s delicacy of choice is…monsters! Unfortunately, society frowns upon such unladylike cravings and brands her the “Voracious Villainess.” At a banquet, she’s attacked by a monster, only to be saved by the feared “Blood-Mad Duke.” He’s brutal, mysterious, and charming. Could he be the one to appreciate her monstrous appetite?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt37430949",
+      "id": "tt9193770",
       "type": "series",
       "name": "Isekai Quartet 3",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx194447-sgmaOpJ0VIUI.jpg",
@@ -246,7 +246,7 @@
       "description": "Genres: Romance\nTags:Shoujo/School/Heterosexual/Female Protagonist\nSae Iwata, a slightly tougher-than-average girl, falls for the gentle smile of Kouki Kamishiro, a delicate boy, back in elementary school. By the time they enter junior high school, Kuoki has grown into a charming and popular teen who now feels out of reach. When they are assigned to the sports festival committee together, Sae’s long-hidden first love begins to stir once more.\n<br><br>\n(Source: Amazon Prime Video, edited)"
     },
     {
-      "id": "kitsu:48822",
+      "id": "tt8228732",
       "type": "series",
       "name": "Kakuriyo -Bed & Breakfast for Spirits- 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177271-Lot4V9iMyPI7.jpg",
@@ -295,7 +295,7 @@
       "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Drawing/Yuri/Work/LGBTQ+ Themes\nFutami, a novice shojo manga artist, is finally publishing her beloved shogi manga, Dear Subaru. But…the stress makes her stomach hurt, she’s forced to push the deadline for her first chapter, and she isn’t making any progress on the storyboards. To top it off, she’s gaining weight from midnight snacking and starts having wild delusions! Will Futami be able to enjoy life as a manga artist?!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32832412",
+      "id": "tt36221414",
       "type": "series",
       "name": "With You, Our Love Will Make It Through",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-rgdRQgwOJUpb.png",
@@ -306,14 +306,7 @@
       "type": "series",
       "name": "Let’s Play",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx193968-tXbbqBOTuClj.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Female Protagonist/Foreign/Video Games\nSamara “Sam” Young is a developer in Los Angeles who’s about to achieve her dreams with her first video game, Ruminate. That is, until a popular streamer gives the game a scathing review. Even worse, Sam finds out the troublesome critic is now her new neighbor! Get lost in a comedic, romantic, and all-too-real story about gaming, memes, and social anxiety. Come for the plot, stay for the doggo. <br><br>\n\n(Source: Crunchyroll) "
-    },
-    {
-      "id": "tt32856801",
-      "type": "series",
-      "name": "Ao no Orchestra 2nd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170018-1PqdLX68YayA.jpg",
-      "description": "Genres: Drama, Music\nTags:Classical Music\nThe second season of <i>Ao no Orchestra</i>."
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Female Protagonist/Primarily Adult Cast/Heterosexual/Foreign/Male Harem/Video Games\nSamara “Sam” Young is a developer in Los Angeles who’s about to achieve her dreams with her first video game, Ruminate. That is, until a popular streamer gives the game a scathing review. Even worse, Sam finds out the troublesome critic is now her new neighbor! Get lost in a comedic, romantic, and all-too-real story about gaming, memes, and social anxiety. Come for the plot, stay for the doggo. <br><br>\n\n(Source: Crunchyroll) "
     },
     {
       "id": "tt34710525",
@@ -321,6 +314,13 @@
       "name": "Cat's Eye (2025)",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184718-GvNnorokj1i3.jpg",
       "description": "Genres: Action, Adventure, Comedy, Mystery, Romance\nTags:Crime/Shounen/Female Protagonist/Police/Fugitive/Episodic/Primarily Female Cast/Heterosexual/Primarily Adult Cast/Urban/Detective/Restaurant\nA new adaption of the manga of the same name by Tsukasa Houjou. <br><br>\n<i>Cat’s Eye</i> is a secretive trio of art thieves relentlessly pursued by Detective Toshio. Unbeknownst to him, the middle sister of the elusive thieves is none other than his girlfriend, Hitomi.<br><br>\n(Source: Disney+)"
+    },
+    {
+      "id": "tt26450255",
+      "type": "series",
+      "name": "Ao no Orchestra 2nd Season",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170018-1PqdLX68YayA.jpg",
+      "description": "Genres: Drama, Music\nTags:Classical Music\nThe second season of <i>Ao no Orchestra</i>."
     },
     {
       "id": "tt13622982",
