Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -8,7 +8,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt35658228"
       },
-      "description": "Genres: Comedy, Music, Supernatural\nTags:Idol/Zombie/Female Protagonist/Ensemble Cast/Primarily Female Cast/LGBTQ+ Themes/Cute Girls Doing Cute Things/Transgender\nAnime movie announced during the live concert \"Zombieland Saga LIVE ～FranChouChou Saga yo tomoni waite kure～\" held on Oct 17, 2021."
+      "description": "Genres: Comedy, Music, Supernatural\nTags:Idol/Zombie/Female Protagonist/Ensemble Cast/Primarily Female Cast/Transgender/LGBTQ+ Themes/Cute Girls Doing Cute Things\nAnime movie announced during the live concert \"Zombieland Saga LIVE ～FranChouChou Saga yo tomoni waite kure～\" held on Oct 17, 2021."
     },
     {
       "id": "tt35114460",
@@ -28,7 +28,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt28834646"
       },
-      "description": "Genres: Drama, Music, Slice of Life\nTags:Female Protagonist/Rock Music/Band/Coming of Age/Full CGI\nCompilation film of <i>GIRLS BAND CRY</i>. The first of the GBC compilation movie duology."
+      "description": "Genres: Drama, Music, Slice of Life\nTags:Band/Female Protagonist/Rock Music/Coming of Age/Full CGI\nCompilation film of <i>GIRLS BAND CRY</i>. The first of the GBC compilation movie duology."
     },
     {
       "id": "tt36639400",
