--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -64,7 +64,7 @@
       "id": "tt35684792",
       "type": "movie",
       "name": "Peleliu: Rakuen no Guernica",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx132776-U34wk1Zbx7pU.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx132776-uZLvjGAa4qup.jpg",
       "behaviorHints": {
         "defaultVideoId": "tt35684792"
       },
